@@ -103,6 +103,8 @@
       of a Tk listbox widget generated by \code{tk_select.list()} no
       longer causes the window to close. (\PR{15407})
 
+      \item Improved handling of edge cases in
+      \code{parallel::splitindices}. (\PR{15552})
     }
   }
 }
